--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,23 +9,24 @@
         android:orientation="vertical"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:background="#aacf53" >
+        android:background="@drawable/back_2" >
 
     </LinearLayout>
+
     <ImageView
         android:id="@+id/imageTitle"
-        android:layout_width="250dp"
+        android:layout_width="800dp"
         android:layout_height="wrap_content"
-        app:srcCompat="@drawable/fortune_title"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="153dp"
-        android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginRight="8dp"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="8dp"
-        app:layout_constraintVertical_bias="0.0" />
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="153dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.282"
+        app:srcCompat="@drawable/fortune_title" />
 
     <ImageButton
         android:id="@+id/btnFortune"
