--- a/app/src/main/res/layout/activity_result.xml
+++ b/app/src/main/res/layout/activity_result.xml
@@ -9,22 +9,23 @@
         android:orientation="vertical"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:background="@drawable/back_shida" />
+        android:background="@drawable/back_1" />
+
     <ImageView
         android:id="@+id/imageResult"
-        android:layout_width="250dp"
+        android:layout_width="800dp"
         android:layout_height="wrap_content"
-        app:srcCompat="@drawable/daikichi"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="8dp"
-        android:layout_marginRight="8dp"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp" />
+        android:layout_marginTop="8dp"
+        app:layout_constraintBottom_toTopOf="@+id/resultText"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/daikichi" />
 
     <Button
         android:id="@+id/btnReturn"
@@ -43,7 +44,8 @@
         app:layout_constraintTop_toBottomOf="@+id/imageResult"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
-        android:background="#f6ad49"/>
+        android:background="#f6ad49"
+        app:layout_constraintVertical_bias="0.882" />
 
     <TextView
         android:id="@+id/resultText"
@@ -54,21 +56,9 @@
         android:layout_marginRight="8dp"
         android:layout_marginTop="8dp"
         android:text="TextView"
-        app:layout_constraintBottom_toTopOf="@+id/imageResult"
+        app:layout_constraintBottom_toTopOf="@+id/btnReturn"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.502" />
+        app:layout_constraintVertical_bias="0.79" />
 </android.support.constraint.ConstraintLayout>
-
-
-
-
-
-
-
-
-
-
-
-
