--- a/app/src/main/res/layout/activity_result.xml
+++ b/app/src/main/res/layout/activity_result.xml
@@ -13,7 +13,7 @@
 
     <ImageView
         android:id="@+id/imageResult"
-        android:layout_width="800dp"
+        android:layout_width="1200dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
@@ -44,8 +44,8 @@
         app:layout_constraintTop_toBottomOf="@+id/imageResult"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
-        android:background="#f6ad49"
-        app:layout_constraintVertical_bias="0.882" />
+        android:background="@drawable/button_return_back"
+        app:layout_constraintVertical_bias="0.882"/>
 
     <TextView
         android:id="@+id/resultText"
